--- a/src/api/.env
+++ b/src/api/.env
@@ -18,3 +18,16 @@
 APP_ENV=dev
 APP_SECRET=8558bd38970be24e88ec7279e8ecf01b
 ###< symfony/framework-bundle ###
+
+DATABASE_URL="postgresql://postgres:Bqox56ewGRxrUY5MzFUNx0w23AXN0MY9@postgres15:5432/hack?serverVersion=15&charset=utf8"
+REDIS_URL=redis://keydb:6379
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+LOCALE=en
+SESSION_LIFETIME=86400
