chore: fix composer

--- a/src/api/composer.json
+++ b/src/api/composer.json
@@ -32,29 +32,27 @@
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": "*",
         "doctrine/persistence": "*",
-        "symfony/console": "*",
-        "symfony/dotenv": "*",
-        "symfony/flex": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/runtime": "*",
-        "symfony/yaml": "*",
         "monolog/monolog": "*",
         "ocramius/package-versions": "*",
+        "phpsimple/orm-traits": "*",
         "predis/predis": "dev-main",
-        "snc/redis-bundle": "dev-master",
         "symfony/apache-pack": "*",
         "symfony/asset": "*",
         "symfony/cache": "*",
         "symfony/config": "*",
+        "symfony/console": "*",
         "symfony/contracts": "*",
         "symfony/debug-bundle": "*",
         "symfony/dependency-injection": "*",
         "symfony/doctrine-bridge": "*",
+        "symfony/dotenv": "*",
         "symfony/error-handler": "*",
         "symfony/event-dispatcher": "*",
         "symfony/expression-language": "*",
         "symfony/filesystem": "*",
         "symfony/finder": "*",
+        "symfony/flex": "*",
+        "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/http-foundation": "*",
         "symfony/http-kernel": "*",
@@ -70,6 +68,7 @@
         "symfony/proxy-manager-bridge": "*",
         "symfony/rate-limiter": "*",
         "symfony/routing": "*",
+        "symfony/runtime": "*",
         "symfony/security-bundle": "*",
         "symfony/serializer": "*",
         "symfony/stopwatch": "*",
@@ -78,6 +77,7 @@
         "symfony/validator": "*",
         "symfony/var-exporter": "*",
         "symfony/web-link": "*",
+        "symfony/yaml": "*",
         "twig/twig": "*"
     },
     "require-dev": {
