--- a/docker/dev/docker-compose.macos.yml
+++ b/docker/dev/docker-compose.macos.yml
@@ -64,3 +64,5 @@ services:
         mem_limit: 2g
         environment:
             NODE_OPTIONS: "--max-old-space-size=1536"
+        ports:
+            - "8000:8000"
