--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vue-tsc": "^1.6.4"
