--- a/docker/dev/docker-compose.linux.yml
+++ b/docker/dev/docker-compose.linux.yml
@@ -49,7 +49,9 @@ services:
             - "host.docker.internal:host-gateway"
         working_dir: /var/www/html
         mem_limit: 64m
-
+        ports:
+            - "80:80"
+            - "443:443"
     node:
         image: ghcr.io/960018/node:amd64
         container_name: ${PROJECT}node
