--- a/src/api/.env
+++ b/src/api/.env
@@ -19,7 +19,7 @@ APP_ENV=dev
 APP_SECRET=8558bd38970be24e88ec7279e8ecf01b
 ###< symfony/framework-bundle ###
 
-DATABASE_URL="postgresql://postgres:Bqox56ewGRxrUY5MzFUNx0w23AXN0MY9@postgres15:5432/hack?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://hackcodex:hackcodex2023@hack_dev_pgsql:5432/hackcodex?serverVersion=15&charset=utf8"
 REDIS_URL=redis://keydb:6379
 
 ###> symfony/messenger ###
