--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "pinia": "^2.1.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
