--- a/docker/prod/conf.d/default.conf
+++ b/docker/prod/conf.d/default.conf
@@ -1,9 +1,9 @@
 upstream php {
-    server hack_dev_php:9000;
+    server hack_php:9000;
 }
 
 upstream node {
-    server hack_dev_node:8000;
+    server hack_node:8000;
 }
 
 server {
