--- a/docker/prod/conf.d/default.conf
+++ b/docker/prod/conf.d/default.conf
@@ -8,22 +8,6 @@ upstream node {
 
 server {
     listen 80;
-    # listen [::]:80;
-
-    server_name hackcodex.whitedigital.eu;
-    return 301 https://$server_name$request_uri;
-}
-
-server {
-    listen 443 ssl http2;
-    # listen [::]:443 ssl http2;
-
-    ssl_certificate      /etc/ssl/private/local.io.crt;
-    ssl_certificate_key  /etc/ssl/private/local.io.key;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-
-    ssl_early_data on;
 
     root /var/www/html/portal/dist;
     index index.js index.html index.htm index.php;
@@ -32,6 +16,8 @@ server {
     proxy_read_timeout 1200;
     proxy_connect_timeout 1200;
     proxy_send_timeout 1200;
+
+    error_log /var/log/nginx/error.log warn;
 
     location ~ ^/(images|assets) {
         try_files $uri /index.html =404;
@@ -53,7 +39,7 @@ server {
 
     location / {
         client_max_body_size 50m;
-        proxy_pass https://node;
+        proxy_pass http://node;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
