--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -10,9 +10,11 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "apexcharts": "^3.40.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
