--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.40.0",
+    "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
