--- a/docker/prod/conf.d/default.conf
+++ b/docker/prod/conf.d/default.conf
@@ -23,7 +23,7 @@ server {
         try_files $uri /index.html =404;
     }
 
-    location ~ ^/(api|bundle|_wdt|_profiler|storage|sse) {
+    location ~ ^/(api|bundle|_wdt|_profiler|storage|sse|quiz-images) {
         client_max_body_size 50m;
         proxy_pass http://127.0.0.1:1111;
         proxy_set_header Host $host;
