--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -10,9 +10,13 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@left4code/tw-starter": "^3.2.9",
+    "@tailwindcss/forms": "^0.5.3",
     "apexcharts": "^3.40.0",
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "vue3-apexcharts": "^1.4.1"
