--- a/src/portal/package.json
+++ b/src/portal/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "postcss": "^8.4.24",
+    "sortablejs": "^1.15.0",
+    "sortablejs-vue3": "^1.2.9",
     "tailwindcss": "^3.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
